tests/snapshots/quests/parse_samples__snapshot_parse_all_sample_quests@samples__GT_New_Horizons_2.8.4_Client_Java_8.zip__config__betterquesting__DefaultQuests__Quests__Tier7ZPM-AAAAAAAAAAAAAAAAAAAAHg==__PrismaticCrystal-xQE-vyLyTeCn0SEIHjbkNQ==.json.snap
---
source: tests/parse_samples.rs
expression: quest
---
{
  "id": 2518160766628455477,
  "prerequisites": [
    11493553555513090777
  ],
  "properties": {
    "auto_claim": false,
    "desc": "After finally getting the §2Prismarine Precipitate§r, the logical next step is to crystallize the Prismarine into a §3Prismatic Crystal§r. Using a §2Magneto-Resonance Lens§r we can do this in a §5§lLaser Engraver§r with the assistance of §2Molten Crystalline Alloy§r.",
    "global_share": false,
    "icon": null,
    "is_global": null,
    "is_main": true,
    "is_silent": false,
    "locked_progress": 0,
    "name": "Prismatic Crystal",
    "party_single_reward": null,
    "quest_logic": "AND",
    "repeat_relative": true,
    "repeat_time": -1,
    "simultaneous": false,
    "snd_complete": "random.levelup",
    "snd_update": "random.levelup",
    "task_logic": "AND",
    "visibility": "NORMAL"
  },
  "required_prerequisites": [
    11493553555513090777
  ],
  "rewards": [],
  "tasks": []
}
