tests/snapshots/quests/parse_samples__snapshot_parse_all_sample_quests@samples__GT_New_Horizons_2.8.4_Client_Java_8.zip__config__betterquesting__DefaultQuests__Quests__Tier7ZPM-AAAAAAAAAAAAAAAAAAAAHg==__RecycleIndium-AAAAAAAAAAAAAAAAAAALiA==.json.snap
---
source: tests/parse_samples.rs
expression: quest
---
{
  "id": 2952,
  "prerequisites": [
    2950
  ],
  "properties": {
    "auto_claim": false,
    "desc": "Free indium!\n\nYou have two options to deal with it.\n\n1) React with Calcium Dust in a chemical reactor.\n\n2) Mix it with Gallium Hydroxide Dust in a mixer.",
    "global_share": false,
    "icon": null,
    "is_global": null,
    "is_main": false,
    "is_silent": false,
    "locked_progress": 0,
    "name": "Recycle Indium",
    "party_single_reward": null,
    "quest_logic": "AND",
    "repeat_relative": true,
    "repeat_time": -1,
    "simultaneous": false,
    "snd_complete": "random.levelup",
    "snd_update": "random.levelup",
    "task_logic": "AND",
    "visibility": "NORMAL"
  },
  "required_prerequisites": [
    2950
  ],
  "rewards": [],
  "tasks": []
}
