tests/snapshots/quests/parse_samples__snapshot_parse_all_sample_quests@samples__GT_New_Horizons_2.8.4_Client_Java_8.zip__config__betterquesting__DefaultQuests__Quests__Tier7ZPM-AAAAAAAAAAAAAAAAAAAAHg==__RecycleTrinium-AAAAAAAAAAAAAAAAAAALgg==.json.snap
---
source: tests/parse_samples.rs
expression: quest
---
{
  "id": 2946,
  "prerequisites": [
    2920
  ],
  "properties": {
    "auto_claim": false,
    "desc": "You can get the Trinium dust by reacting it with Hydrogen in an LCR.",
    "global_share": false,
    "icon": null,
    "is_global": null,
    "is_main": false,
    "is_silent": false,
    "locked_progress": 0,
    "name": "Recycle Trinium",
    "party_single_reward": null,
    "quest_logic": "AND",
    "repeat_relative": true,
    "repeat_time": -1,
    "simultaneous": false,
    "snd_complete": "random.levelup",
    "snd_update": "random.levelup",
    "task_logic": "AND",
    "visibility": "NORMAL"
  },
  "required_prerequisites": [
    2920
  ],
  "rewards": [],
  "tasks": []
}
